@@ -27,6 +27,8 @@ CHG: Ticket#151 - URL format is modified to handle empty GET values (Qiang)
 CHG: Ticket#153 - TAssetManager now ignores .svn directories (Qiang)
 NEW: TTableHeaderRow, TTableFooterRow and table section support (Qiang)
 NEW: TCompositeControl (Qiang)
+NEW: TTextProcessor (Qiang)
+NEW: TMarkdown (Wei)
 NEW: Blog demo (Qiang)
 
 Version 3.0.0 May 1, 2006
